for myself to fix images